--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Tailwind</title>
-    <link href="/css/tailwind.css" rel="stylesheet">
-</head>
+    <link href="/css/tailwind.css" rel="stylesheet" />
+  </head>
 
-<body>
-    <h1 class="text-4xl text-center font-bold text-blue-500">Learning Tailwind!</h1>
-</body>
-
+  <body class="bg-gray-100">
+    <div class="p-8">
+      <img src="img/logo.svg" alt="logo" class="h-10" />
+      <img
+        src="img/beach-work.jpg"
+        alt="woman on beach"
+        class="mt-6 rounded-lg shadow-xl"
+      />
+      <h1 class="mt-6 text-2xl font-bold text-grey-900">
+        You can work from anywhere.
+        <span class="text-indigo-600"> Take advantage of it. </span>
+      </h1>
+      <p class="mt-2 text-gray-600">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique,
+        iure fuga. Officia eveniet voluptatem exercitationem quasi nulla
+        veritatis quae magnam, harum rem molestiae deserunt voluptate fugit
+        dolor eos in fugiat?
+      </p>
+      <div class="mt-4">
+        <a
+          href="#"
+          class="inline-block bg-indigo-500 text-white font-semibold px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider text-sm"
+          >Book your escape</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
