--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="mt-4">
           <a
             href="#"
-            class="inline-block bg-indigo-500 text-white font-semibold px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider text-sm sm:text-base"
+            class="inline-block bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-0.5 transform transition text-white font-semibold px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider text-sm sm:text-base focus:outline-none focus:ring active:bg-indigo-600"
             >Book your escape</a
           >
         </div>
